<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_1">Popular Movies</string>
    <string name="app_2">Stock Hawk</string>
    <string name="app_3">Build It Bigger</string>
    <string name="app_4">Mark Your App Material</string>
    <string name="app_5">Go Ubiquitous</string>
    <string name="app_6">Capstone</string>
    <string name="main_button_group_label">My Nanodegree Apps!</string>
    <string name="main_button_toast">This button will launch my %1$s app!</string>
</resources>
