<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.qiplet.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/main_button_group_label"/>

    <Button style="@style/portfolioButton"
        android:id="@+id/button1"
        android:text="@string/app_1"/>

    <Button style="@style/portfolioButton"
        android:id="@+id/button2"
        android:text="@string/app_2" />

    <Button style="@style/portfolioButton"
        android:id="@+id/button3"
        android:text="@string/app_3" />

    <Button style="@style/portfolioButton"
        android:id="@+id/button4"
        android:text="@string/app_4" />

    <Button style="@style/portfolioButton"
        android:id="@+id/button5"
        android:text="@string/app_5" />

    <Button style="@style/portfolioButton"
        android:id="@+id/button6"
         android:text="@string/app_6" />

</LinearLayout>
